--- a/docs/_posts/debian/2024-03-30-debian11.8-new-install-config.md
+++ b/docs/_posts/debian/2024-03-30-debian11.8-new-install-config.md
@@ -6,7 +6,7 @@ categories: debian
 tags: debian11.8
 ---
 
-# some note  
+# debian11.8安装后简要配置  
 
 ## 1. system install  
 1) download link: https://cdimage.debian.org/mirror/cdimage/archive/11.8.0/amd64/iso-dvd/  
