--- a/docs/_posts/debian/2024-08-18-debian12.4-new-install-config.md
+++ b/docs/_posts/debian/2024-08-18-debian12.4-new-install-config.md
@@ -38,11 +38,18 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bookworm-security main 
 deb-src https://mirrors.tuna.tsinghua.edu.cn/debian-security bookworm-security main contrib non-free non-free-firmware
 ```
 
-## 4. update vim  
+## 4. update necessary software with user root  
 ```
+apt update  
+
 dpkg -l | grep vim  
 apt remove vim-tiny vim-common  
 apt install vim  
+
+apt install sudo
+
+echo "alias ll='ls -al'" >>/etc/profile
+source /etc/profile
 ```
 
 ## 5. static ip  
