config.yml suit for minimal-mistakes@4.27.0

--- a/docs/_posts/linux/2025-11-13-nfs.md
+++ b/docs/_posts/linux/2025-11-13-nfs.md
@@ -4,7 +4,6 @@ date:   2025-11-13 00:20:00 +0800
 last_modified_at: 2025-11-13 00:20:00 +0800
 categories: linux
 tags: nfs
-published: false
 ---
 
 # linux nfs on ubuntu  
@@ -27,4 +26,7 @@ sudo exportfs -v     # checkt current configuration in use
 sudo apt install nfs-common
 sudo mount -t nfs 192.168.8.42:/sharedir /u01
 ```
+
+# reference  
+[Linux NFS 共享设置教程](https://littlenewton.uk/2025/08/tutorial-nfs-export-and-mount/)
 
